@@ -1,19 +1,19 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA256
 
-AUX xvid-1.2.1-ncpu.patch 1118 RMD160 3b8a12140535f5b90f8ed742b94061bdc80cddb9 SHA1 75771276eca7120c93489123be2723ea85031092 SHA256 100ccaff0d4edcfc0969eeea1be609f5beefab336fcb7e747f1fbbe66f563e8a
-AUX xvid-1.2.2-noexecstack.patch 17680 RMD160 cf312c4b27acdc47a8340acfe8423b4450e07743 SHA1 a3547697ebba7583ca2ccd1e430762b84079cb55 SHA256 ef35cff8d86cee714f887746995c664b307ae35dd77472b9007987562dc7e8d3
-AUX xvid-1.2.2-x86_64-darwin.patch 2441 RMD160 5cb1e15c85a0812b638914d248bc142b6c47d8eb SHA1 34002169f050b828f1c74a73a3772363e874b0d4 SHA256 cb4cca36cff8e6de5e5deb41bf1933cef6e40d7be8412ad0d9353add3f17e708
-DIST xvidcore-1.2.2.tar.bz2 643344 RMD160 5fbbc99a02d9eab7f2394220cec2c872957ff26f SHA1 d03270c803592f7655e7aa4181de587be25ba97f SHA256 e42a602de489438b96f7f4742b68e9bed7efa7aee3570379bb2582b4290b6d11
-DIST xvidcore-1.3.2.tar.bz2 697038 RMD160 968493d5813cbc30630532a1a64011e5572a5017 SHA1 74f9ce9c1bebcc9806bf21cb53274b8102700309 SHA256 d6c11334e1e771f9e4722eff454762325fd0989f6a4217abca296d6770160bf4
-EBUILD xvid-1.2.2-r2.ebuild 1895 RMD160 5e487d2f264968a0b69fb2ad67edeec96bb294ff SHA1 40df25fd03aa1157c8538ea3ab5fe3687d0f691c SHA256 27af415a3db3cc49bcb2b4724fd43e3dea550efebc6b9a54869d1379978fc8cd
-EBUILD xvid-1.3.2.ebuild 1598 RMD160 c8258e87b87ae323ddc463d0bd204ecf4c9d8523 SHA1 677416c161bde089dce4ce9f0fdeed58eab2ada0 SHA256 1d34ee4e03953b514cdd3822c760a5b0603cf8cd098b7e1ae8c1d3e0d47720e2
-MISC ChangeLog 17062 RMD160 70fabc940511798d9ae4415dc226c371b21436fc SHA1 9d806a08d2201d3b91fc2e4ba9751640d68bc579 SHA256 3730c549dae973ad18ebab5b2d20ba0e02f682adb2f6a2bb34173de53dc2af24
-MISC metadata.xml 326 RMD160 91617f57d22a91f7320a8a4cf31acdb62be99786 SHA1 8a03f8977295939de344ac23e4fdd8185d953d65 SHA256 44f920b8335d7708c3208af6281abb98d71274f3400ed3538ca469c3846705c9
+AUX xvid-1.2.1-ncpu.patch 1118 SHA256 100ccaff0d4edcfc0969eeea1be609f5beefab336fcb7e747f1fbbe66f563e8a SHA512 8ccdf31dc69d53d029dcda5fe6adf66f9629a99507493c3b297f1873677ca6f8052ba787c0f24f3254f2132478d269ebfb826e9d0c0737fe6ea93c7dee08b703 WHIRLPOOL 897cca82d64cf3d9db8ee436744e0117423a00a16713d8e2c5ed27c6b4a66466eb25f8b6b3c4dbb7406b81613004eec3a96db9abf2437f6a115e54d78b73e79d
+AUX xvid-1.2.2-noexecstack.patch 17680 SHA256 ef35cff8d86cee714f887746995c664b307ae35dd77472b9007987562dc7e8d3 SHA512 91e0fd9e9135894a9c692817fd9c62a872de9ae8572b996eb36b04d0abca046a4c9b0de7fb6d16b8b4ba74da7b0c1e2b56b379fb4c941e946f1ab80807511cbd WHIRLPOOL 2957c0e489797d5d06e138ad3c6ab64f3b89eca5fd8bac11919f6125aa5fa4eef7111b104448efc9720ac36ffb05df3bdc17653f5bf32768485f035510bb808d
+AUX xvid-1.2.2-x86_64-darwin.patch 2441 SHA256 cb4cca36cff8e6de5e5deb41bf1933cef6e40d7be8412ad0d9353add3f17e708 SHA512 eb8e28f6cac4e8ed7d8a6657edd1c0153cf031badcc254c75ff027678ffc4dc1388e112b8ca810421d6b023bdf55d81a6e1ac1791d4ebd7ea263923573373691 WHIRLPOOL 0779555bdefd57e94c57b429c670c1a93973251351a9ffa51810220bbecca15c4d855c6e2e71bfa856fc5dfc8ff56f42b7ebd1ae326823c3b9b8a7d24404e273
+DIST xvidcore-1.2.2.tar.bz2 643344 SHA256 e42a602de489438b96f7f4742b68e9bed7efa7aee3570379bb2582b4290b6d11 SHA512 34e68f24c0f579daf7ed5b7d352ac515cb7b329467b4763fa4ccbe689f2defe97fd2f14e5e08d01e67438a12a53b94a8cd66040d380c36321a9874a88c09fc8f WHIRLPOOL d87db115a4bf0cbdbcbc9cc19f4a24abca3cdbb8c74614413941a39bc12c754472640ec05b8ea1fa09852d057b18a340873faeb5fd29a6428a9b1ac5e5eb316e
+DIST xvidcore-1.3.2.tar.bz2 697038 SHA256 d6c11334e1e771f9e4722eff454762325fd0989f6a4217abca296d6770160bf4 SHA512 0b7725314abc1dbe1f0ba4700393c391b8f98589300051ad7ebc5bdef7e87b20f19dcc88c37afbc1dfa117b6c8c1d5051b8f8d263c419e6965c5bc5f0201dc97 WHIRLPOOL c9e3f1a99544fe5b2394afc9adee3764565572b7b7fb46e2c92500d13851a8225b3e8b8e0db280a37aba72ff978e11a8c9f80d3a65b27f682087b1308f506dfa
+EBUILD xvid-1.2.2-r2.ebuild 1895 SHA256 27af415a3db3cc49bcb2b4724fd43e3dea550efebc6b9a54869d1379978fc8cd SHA512 3ac180e3d381c54ebc1b1a630c8e31420bbb921687d1dd8b5a3733595157a6e2887d1081565d4398a6fbd51c4db7354c5c3b0ea8bf03c742070369c9766ab7bc WHIRLPOOL 5220943b07c71d9f9b0e08ddae0dad449215414d794c78eb073715fc11278bbf294a541bdfab4526e8628951bbb8d287cb608cc6e8372b27f4973bca5c54d8db
+EBUILD xvid-1.3.2.ebuild 1644 SHA256 4a1006d3ba0497094d6406e78a856183744e211bce4bc594748dc28d786c0b9f SHA512 c3d21f4707a97b0a824d7f8b0bdcd453787cb5c27344bfe6f87d2aeeb1c9c1eaaf0232a06c8e05ac51f7c2af0f398746222cc1c53ce99d633889bba00eaa7bfc WHIRLPOOL e5ead24579c464aad805da1150a143db8ec9af52393013fd7e36e837d150edd3b472b8ccba70063df800b30d32fc6d6eb1676bdb025893d045b26600e2d73af6
+MISC ChangeLog 17202 SHA256 c0a9a7513892102690f72c1ee16760d67bc03af5b522c88da9fdbf548baffe9e SHA512 db11df64eb74de32ee0d809dff37f5bc65b7bde9eb39c7fb0e3cb486a6d898e681de2dc07f0a1f9f75ed0065616729fcb9333158990ee21418218cb89ff41638 WHIRLPOOL cbe139474a86d2ba688b188ae9269537c321d5559ddb77422741c7a238ee2eecb00ae0bb114ea74933b66391ecf58908a1d41d0027e8ab659584110f81ded46e
+MISC metadata.xml 326 SHA256 44f920b8335d7708c3208af6281abb98d71274f3400ed3538ca469c3846705c9 SHA512 56eb9fa6a5cebf28725a3b0023545cc5c7d1967f63b94358d30f69e08c1837c9129e761108200579f209b9743695999b45ab9c0301e190eadd59bbb17346c42e WHIRLPOOL de611ff8bb19c90f6810575bc79b83cd0116ab70715e7445364236e6ad78f1665fd7a5e33b3a84500b9bd45f853f809dcc98586494f57d743f6bec559ed1ae70
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (SunOS)
 
-iEYEARECAAYFAk+/14YACgkQX3X2B8XHTokNQACgnXjCjMRo+vzCWLcCVf29bEl9
-rnYAn3upOAbFCtyvbP3+K9/FkpGUpKgw
-=AAbW
+iEYEAREIAAYFAlCK4jcACgkQX3X2B8XHTomRkgCgnz7CI1nyIdE7HGw0/o3kwgxB
+Fj0AniZ2izbagHmTQeHbkrJFnV4OiigB
+=Fuj+
 -----END PGP SIGNATURE-----
