@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/xvid
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/xvid/ChangeLog,v 1.133 2012/03/06 20:52:32 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/xvid/ChangeLog,v 1.134 2012/09/11 06:57:39 vapier Exp $
+
+  11 Sep 2012; Mike Frysinger <vapier@gentoo.org> xvid-1.3.2.ebuild:
+  Disable assembly code for x32 ABI for now #421841 by Xavier Miller.
 
   06 Mar 2012; Brent Baude <ranger@gentoo.org> xvid-1.3.2.ebuild:
   Marking xvid-1.3.2 ppc for bug 399849
